frontend/test/should_pass/hom_014.grg
using deep_model_001;

rule r {
	x:A -e:Edge-> y:Ac -f:Edge-> z:B <-:Edge- zz:AB;
	hom(x, z);

	replace {
		x <-:Edge- y <-- z;
	}
}

