frontend/test/should_fail/delretypesame_003_e.grg
rule r{	-e:Edge->;	p:P(e);		modify {		-f:Edge<e>->;		p();	}}pattern P(-e:Edge->){	modify {		delete(e);	}}